rebooting bit by bit align fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,31 @@
 
 html,
 body {
+  height:100vh;
   background: #121212;
   color: whitesmoke;
+  display: flex;
+  flex-direction: column;
 }
 
-*{
+main,header,body,section,.container{
   border: 1px solid red;
 }
+
+@media only screen and (min-width:992px){
+  body{
+    display: flex;
+    flex-direction: column;
+  }
+
+  main{
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
 
 a{
   text-decoration: none;
